--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MR Generator</title>
+    <title>Maze Rats Generator (unofficial)</title>
     <link data-trunk rel="css" href="./styles/bulma.min.css">
     </link>
 </head>
